<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_atas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:contentDescription="@string/back"
                        android:focusable="true"
                        android:src="@drawable/ic_arrow_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@+id/btn_back"
                        android:text="@string/lihat_biodata"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar_atas"
                android:background="@drawable/awan"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_biodata"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp" />

                <ImageView
                    android:id="@+id/ma_fab"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/rv_biodata"
                    android:background="@color/pink"
                    android:clickable="true"
                    android:contentDescription="@string/back"
                    android:focusable="true"
                    android:src="@drawable/add" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ma_fab"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/blueindigo"
                    android:padding="16dp"
                    android:text="@string/qiswatul_ulfah"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/white"
                    android:padding="16dp"
                    android:text="@string/g_231_17_0032"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nim"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/deskripsi"
                    android:textAllCaps="true"
                    android:textColor="@color/pink"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>