<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.UpdateBiodataActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="4dp"
            android:padding="2dp"
            android:layout_marginStart="16dp"
            android:text="Nomor :"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:hint="@string/enter_number"
            android:inputType="number"
            android:padding="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="2dp"
            android:text="Nama :"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:padding="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:padding="2dp"
            android:text="Tanggal Lahir :"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:hint="Masukkan Tanggal Lahir"
            android:padding="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:padding="2dp"
            android:text="Jenis Kelamin:"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:hint="Masukkan Jenis Kelamin"
            android:inputType="text"
            android:padding="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="16dp"
            android:padding="2dp"
            android:text="Alamat :"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:hint="Masukkan Alamat"
            android:inputType="text"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:padding="12dp"
                android:textColor="@android:color/white"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="true"
                android:text="@string/create" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:textColor="@android:color/white"
                android:background="@drawable/background"
                android:padding="12dp"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="true"
                android:text="@string/back" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
